# commutify

./: README.md
Client/: CMakeLists.txt  resources.qrc  style.css
Client/src/: connection.cpp  connection.h  database.cpp  database.h  dialog_box.cpp  dialog_box.h  input_field.cpp  input_field.h  login.cpp  login.h  main.cpp  main_window.cpp  main_window.h  message_box.cpp  message_box.h  networktypes.h  package.cpp  package.h  scrollarea_widget.cpp  scrollarea_widget.h
ProcServer/: ProcServer.cpp  ThreadPool.cpp  ThreadPool.h  commutify.sql  inhandle.cpp  inhandle.h  parser.cpp  parser.h  requests.cpp  requests.h  server.cpp  server.h
